--- a/about.html
+++ b/about.html
@@ -17,6 +17,17 @@
         <div id="logo-container">
             <img id="go-home" src="img/Lahani Logo.png" />
         </div>
+        <div id="nav-links-row">
+            <a class="nav-link" href="about.html">
+                <div>About Us</div>
+            </a>
+            <a class="nav-link" href="menu.html">
+                <div>Menu</div>
+            </a>
+            <a class="nav-link" href="order.html">
+                <div>Order</div>
+            </a>
+        </div>
         <div id="account-container">
             <span>
                 <img id="pfp" src="https://secure.gravatar.com/avatar/15f8001624bd5b624aa2c00d0d25b1f4?s=168&d=mm&r=g">
@@ -56,7 +67,7 @@
                 <img style="object-view-box: inset(0% 10% 20% 30%);"
                     src="https://static.euronews.com/articles/stories/05/46/11/34/1440x810_cmsv2_f54fdc9f-16b4-5eda-be02-37d88540662c-5461134.jpg">
                 <p>
-                    Many people often ask how we you make great food, even with restrictions? Our answer at
+                    Many people often ask how we make great food, even with restrictions? Our answer at
                     Lahani is simple: use the freshest ingredients, and, most importantly, creativity.
                     Being a vegetarian restaurant, we provide great attention to tasty and healthy vegetarian options
                     using
